# bossypaints

./: .gitignore  README.md  compose.yml  view-data.ipynb
server/: .env  Dockerfile  README.md  checkpoints.json  pyproject.toml  read-vol.ipynb  server.py  tasks.json
server/bossypaints/: background.py  checkpoints.py  renderer.py  tasks.py
server/exports/: Witvliet2020_Dataset_1_em_3_de185e4bfdeb4ad288ff35c788d08dfd.10.tif  Witvliet2020_Dataset_1_em_3_de185e4bfdeb4ad288ff35c788d08dfd.11.tif  Witvliet2020_Dataset_1_em_3_de185e4bfdeb4ad288ff35c788d08dfd.12.tif  Witvliet2020_Dataset_1_em_3_de185e4bfdeb4ad288ff35c788d08dfd.13.tif  Witvliet2020_Dataset_1_em_3_de185e4bfdeb4ad288ff35c788d08dfd.14.tif  Witvliet2020_Dataset_1_em_3_de185e4bfdeb4ad288ff35c788d08dfd.15.tif  Witvliet2020_Dataset_1_em_3_de185e4bfdeb4ad288ff35c788d08dfd.16.tif  Witvliet2020_Dataset_1_em_3_de185e4bfdeb4ad288ff35c788d08dfd.17.tif  Witvliet2020_Dataset_1_em_3_de185e4bfdeb4ad288ff35c788d08dfd.18.tif  Witvliet2020_Dataset_1_em_3_de185e4bfdeb4ad288ff35c788d08dfd.19.tif  Witvliet2020_Dataset_1_em_3_de185e4bfdeb4ad288ff35c788d08dfd.20.tif  Witvliet2020_Dataset_1_em_3_de185e4bfdeb4ad288ff35c788d08dfd.6.tif  Witvliet2020_Dataset_1_em_3_de185e4bfdeb4ad288ff35c788d08dfd.7.tif  Witvliet2020_Dataset_1_em_3_de185e4bfdeb4ad288ff35c788d08dfd.8.tif  Witvliet2020_Dataset_1_em_3_de185e4bfdeb4ad288ff35c788d08dfd.9.tif
server/webbuild/: index.html
server/webbuild/_app/: version.json
server/webbuild/_app/immutable/assets/: 2.CnZaqB64.css
server/webbuild/_app/immutable/chunks/: entry.BpVcDLSf.js  legacy.VGsu45if.js  (+5 more)
(+40 files in other folders)
